<resources>
    <string name="app_name">Snowline</string>
    <string name="route_num">16</string>
    <string name="route_name">University of Manitoba to the Moon</string>
    <string name="route_time">6 mins</string>
    <string name="hintbox">Enter Stop Number</string>
    <string name="button">Find Schedule</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="or">or</string>
    <string name="one_time_setup">One time setup, please wait</string>
    <string name="day_after_tomorrow">Day After Tomorrow</string>
    <string name="digital_dialog_find_stop_schedule_B">Find Stop Schedule</string>
    <string name="home_scr_menu_find_schedule_stop_num">Find Stop Schedule</string>
    <string name="home_scr_menu_find_nearby_stops">Find Nearby Stops</string>

    <string name="schedule_adapter_bus_mins">%d mins</string>

</resources>
