<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/list_view_line"
    android:layout_columnWeight="3"
    android:background="@drawable/list_line_background">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/route_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/route_num"
            android:fontFamily="monospace"
            android:textSize="@dimen/route_num_size"
            android:background="@drawable/stop_number_background"
            android:textColor="@color/color_light_green"
            android:shadowColor="@color/color_glow_green"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="10"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:layout_column="1"/>

        <TextView
            android:id="@+id/route_name"
            android:layout_width= "wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="1.0"
            android:layout_column="2"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/route_name"
            android:fontFamily="monospace"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/color_light_green"
            android:shadowColor="@color/color_glow_green"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="10" />

        <TextView
            android:id="@+id/route_times"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/route_time"
            android:fontFamily="monospace"
            android:textSize="@dimen/route_time_size"
            android:textColor="@color/color_light_green"
            android:shadowColor="@color/color_glow_green"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="10"
            android:gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_column="3"/>
    </TableRow>
    <View
        android:id="@+id/schedule_format_divider_i"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_white"
        android:layout_marginTop="15dp"/>
</TableLayout>